fix: color contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,7 @@
 @tailwind utilities; */
 
 :root{
-    --primary-color: #89CFF0;
+    --primary-color: #58b1db;
     --secondary-color: #F46FA1;
     --tertiary-color: #93C83E;
     --quaternary-color: #AD5691;
